52-GKE-Ingress-Cookie-Affinity/01-kube-manifests-with-cookie-affinity/01-kubernetes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdn-demo-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: cdn-demo
  template:
    metadata:
      labels:
        app: cdn-demo
    spec:
      containers:
      - name: cdn-demo
        image: us-docker.pkg.dev/google-samples/containers/gke/hello-app-cdn:1.0
        ports:
        - containerPort: 8080
