52-GKE-Ingress-Cookie-Affinity/01-kube-manifests-with-cookie-affinity/02-kubernetes-NodePort-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdn-demo-nodeport-service
  annotations:
    #cloud.google.com/backend-config: '{"ports": {"80":"my-backendconfig"}}'
    cloud.google.com/backend-config: '{"default": "my-backendconfig"}'     
spec:
  type: NodePort
  selector:
    app: cdn-demo
  ports:
  - port: 80
    targetPort: 8080
